<resources>
    <string name="app_name">Task</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="describtion">Describtion</string>
    <string name="todo">ToDo</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="sharetask">ShareTask</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="admin_login">Admin LogIn</string>
    <string name="username_in_list">Username:</string>
    <string name="back">Back</string>
    <string name="delete_user">Delete User</string>
    <string name="are_you_sure_you_want_delete_this_user">Are you sure you want delete this user?</string>

</resources>
