<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_task"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|left"
            android:text="@string/title"
            android:textColor="#070707"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/describtion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/describtion"
            android:textColor="#070707"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/describtion_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#030303"
            android:textSize="20sp" />

        <Button
            android:id="@+id/time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#070707"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_ToDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo" />

            <RadioButton
                android:id="@+id/radioButton_Doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doing" />

            <RadioButton
                android:id="@+id/radioButton_Done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done" />


        </RadioGroup>

<!--        <CheckBox-->
<!--            android:id="@+id/state_checkBox"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="left"-->
<!--            android:text=""-->
<!--            android:textSize="18sp" />-->


    </LinearLayout>



</LinearLayout>