<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004D40"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:baselineAlignBottom="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/task" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUser_login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPass_login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp_login_fragment"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonLogin_login_fragment"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>